@@ -94,7 +94,7 @@ If no nodes have the requested features, then the job will be rejected
 by the slurm job manager.
 
 .TP
-\fB\-\-comment\fR
+\fB\-\-comment\fR=<\fIstring\fR>
 An arbitrary comment.
 
 .TP
