@@ -111,7 +111,7 @@ the \-\-cpus\-per\-task=3 options, the controller knows that each task requires
 of 4 nodes, one for each of the 4 tasks.
 
 .TP
-\fB\-\-comment\fR
+\fB\-\-comment\fR=<\fIstring\fR>
 An arbitrary comment.
 
 .TP
