@@ -187,7 +187,7 @@ tasks will be allocated per node as possible while satisfying
 the \fB\-c\fR restriction. 
 
 .TP
-\fB\-\-comment\fR
+\fB\-\-comment\fR=<\fIstring\fR>
 An arbitrary comment.
 
 .TP
